# xubuntu-custom

./: .gitignore  Cargo.toml  README.md  bilug_wallpapers.tar.bz2  custom_shell.sh  init-zram-swapping.sh  look.tar.bz2  post_install.sh  sonar-project.properties  zram.sh
src/: fixes.rs  logger.rs  main.rs  messages.rs  op_types.rs  operatives.rs  packages.json  post_install.rs  types.rs  utilities.rs
