[package]
name = "xubuntu-custom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3

[dependencies]
async-recursion = "1.0.0"
reqwest = "*"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.79"
nix = "0.15.0"